# gsl-for-synopsys

./: .gitattributes  .gitignore  Makefile  NOTICE.SYNOPSYS  README.md  setup.sh
blas/: CMakeLists.txt  Makefile
blas/cmake/: blasConfig.cmake
block/: CMakeLists.txt  Makefile
block/cmake/: blockConfig.cmake
block/test/: CMakeLists.txt  Makefile
bspline/: CMakeLists.txt  Makefile
bspline/cmake/: bsplineConfig.cmake
bspline/test/: CMakeLists.txt  Makefile
cblas/: CMakeLists.txt  Makefile
cblas/cmake/: cblasConfig.cmake
cblas/test/: CMakeLists.txt  Makefile
cdf/: CMakeLists.txt  Makefile
cdf/cmake/: cdfConfig.cmake
cdf/test/: CMakeLists.txt  Makefile
cheb/: CMakeLists.txt  Makefile
cheb/cmake/: chebConfig.cmake
cheb/test/: CMakeLists.txt  Makefile
combination/: CMakeLists.txt  Makefile
combination/cmake/: combinationConfig.cmake
combination/test/: CMakeLists.txt  Makefile
complex/: CMakeLists.txt  Makefile
complex/cmake/: complexConfig.cmake
complex/test/: CMakeLists.txt  Makefile
config/: README.md  env.mk  gsl_config.mk  version.sh
const/: CMakeLists.txt  Makefile
const/cmake/: constConfig.cmake
const/test/: CMakeLists.txt  Makefile
deriv/: CMakeLists.txt  Makefile
deriv/cmake/: derivConfig.cmake
deriv/test/: CMakeLists.txt  Makefile
dht/: CMakeLists.txt  Makefile
dht/cmake/: dhtConfig.cmake
dht/test/: CMakeLists.txt  Makefile
diff/: CMakeLists.txt  Makefile
diff/cmake/: diffConfig.cmake
diff/test/: CMakeLists.txt  Makefile
doc/examples/: multimin.c  nlfit4.c  nmsimplex.c  ode-initval-low-level.c  odefixed.c
doc/examples/bspline/: CMakeLists.txt  Makefile
doc/examples/combination/: CMakeLists.txt  Makefile
doc/examples/const/: CMakeLists.txt  Makefile
doc/examples/dwt/: CMakeLists.txt  Makefile
doc/examples/fftreal/: CMakeLists.txt  Makefile
doc/examples/fitreg/: CMakeLists.txt  Makefile
doc/examples/intro/: CMakeLists.txt  Makefile
doc/examples/matrix/: CMakeLists.txt  Makefile
doc/examples/monte/: CMakeLists.txt  Makefile
doc/examples/nlfit4/: CMakeLists.txt  Makefile
doc/examples/roots/: CMakeLists.txt  Makefile
doc/examples/siman/: CMakeLists.txt  Makefile
eigen/: CMakeLists.txt  Makefile
eigen/cmake/: eigenConfig.cmake
eigen/test/: CMakeLists.txt  Makefile
err/: CMakeLists.txt  Makefile
err/cmake/: errConfig.cmake
err/test/: CMakeLists.txt  Makefile
fft/: CMakeLists.txt  Makefile
fft/cmake/: fftConfig.cmake
fft/test/: CMakeLists.txt  Makefile
filter/: CMakeLists.txt  Makefile
filter/cmake/: filterConfig.cmake
filter/test/: CMakeLists.txt  Makefile
fit/: CMakeLists.txt  Makefile
fit/cmake/: fitConfig.cmake
fit/test/: CMakeLists.txt  Makefile
histogram/: CMakeLists.txt  Makefile
histogram/cmake/: histogramConfig.cmake
histogram/test/: CMakeLists.txt  Makefile
ieee-utils/: CMakeLists.txt  Makefile  fp-arc_ev.c  fp.c
ieee-utils/cmake/: ieee-utilsConfig.cmake
ieee-utils/test/: CMakeLists.txt  Makefile
include/: CMakeLists.txt  Makefile
include/cmake/: ev_gsl_includesConfig.cmake
integration/: CMakeLists.txt  Makefile
integration/cmake/: integrationConfig.cmake
integration/test/: CMakeLists.txt  Makefile
interpolation/: CMakeLists.txt  Makefile
interpolation/cmake/: interpolationConfig.cmake
interpolation/test/: CMakeLists.txt  Makefile
linalg/: CMakeLists.txt  Makefile
linalg/cmake/: linalgConfig.cmake
linalg/test/: CMakeLists.txt  Makefile
matrix/: CMakeLists.txt  Makefile
matrix/cmake/: matrixConfig.cmake
matrix/test/: CMakeLists.txt  Makefile
min/: CMakeLists.txt  Makefile
min/cmake/: minConfig.cmake
min/test/: CMakeLists.txt  Makefile
monte/: CMakeLists.txt  Makefile
monte/cmake/: monteConfig.cmake
monte/test/: CMakeLists.txt  Makefile
movstat/: CMakeLists.txt  Makefile
movstat/cmake/: movstatConfig.cmake
movstat/test/: CMakeLists.txt  Makefile
multifit/: CMakeLists.txt  Makefile
multifit/cmake/: multifitConfig.cmake
multifit/test/: CMakeLists.txt  Makefile
multifit_nlinear/: CMakeLists.txt  Makefile
multifit_nlinear/cmake/: multifit_nlinearConfig.cmake
multifit_nlinear/test/: CMakeLists.txt  Makefile
multilarge/: CMakeLists.txt  Makefile
multilarge/cmake/: multilargeConfig.cmake
multilarge/test/: CMakeLists.txt  Makefile
multilarge_nlinear/: CMakeLists.txt  Makefile
multilarge_nlinear/cmake/: multilarge_nlinearConfig.cmake
multilarge_nlinear/test/: CMakeLists.txt  Makefile
multimin/: CMakeLists.txt  Makefile
multimin/cmake/: multiminConfig.cmake
multimin/test/: CMakeLists.txt  Makefile
multiroots/: CMakeLists.txt  Makefile
multiroots/cmake/: multirootsConfig.cmake
multiroots/test/: CMakeLists.txt  Makefile
multiset/: CMakeLists.txt  Makefile
multiset/cmake/: multisetConfig.cmake
multiset/test/: CMakeLists.txt  (+1 more)
ntuple/: CMakeLists.txt  Makefile
ode-initval/: CMakeLists.txt  Makefile
ode-initval2/: CMakeLists.txt  Makefile
ode-initval2/cmake/: ode-initval2Config.cmake
ode-initval2/test/: CMakeLists.txt  Makefile
permutation/: CMakeLists.txt  Makefile
poly/: CMakeLists.txt  Makefile
qrng/: CMakeLists.txt  Makefile
randist/: CMakeLists.txt  Makefile
randist/cmake/: randistConfig.cmake
randist/test/: CMakeLists.txt  Makefile
rng/: CMakeLists.txt  Makefile
rng/cmake/: rngConfig.cmake
rng/test/: CMakeLists.txt  Makefile
roots/: CMakeLists.txt  Makefile
rstat/: CMakeLists.txt  Makefile
siman/: CMakeLists.txt  Makefile
sort/: CMakeLists.txt  Makefile
sort/test/: CMakeLists.txt  Makefile
spblas/: CMakeLists.txt  Makefile
specfunc/: CMakeLists.txt  Makefile
specfunc/cmake/: specfuncConfig.cmake
specfunc/test/: CMakeLists.txt  Makefile
splinalg/: CMakeLists.txt  Makefile
spmatrix/: CMakeLists.txt  Makefile
statistics/: CMakeLists.txt  Makefile
sum/: CMakeLists.txt  Makefile
sys/: CMakeLists.txt  Makefile
sys/cmake/: sysConfig.cmake
sys/test/: CMakeLists.txt  Makefile
test/: CMakeLists.txt  Makefile
utils/: CMakeLists.txt  Makefile
vector/: CMakeLists.txt  Makefile
wavelet/: CMakeLists.txt  Makefile
(+195 files in other folders)
